--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.borderWithInfo {
+    position: absolute;
+    width: calc(100%);
+    height: calc(100%);
+    border-style: solid;
+    border-width: 4px;
+}
+
+.borderWithInfoRadius {
+    position: absolute;
+    width: calc(100%);
+    height: calc(100%);
+    border-style: solid;
+    border-width: 4px;
+    border-radius: 12px;
+}
+
+
+.borderInfo {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    padding: 4px 10px;
+    border-bottom-left-radius: 10px;
+    font-weight: bold;
+    font-size: 12px;
+}
